{
    "name": "Input",
    "maps": [
        {
            "name": "player",
            "id": "8218b0f7-a19e-4700-b94f-dbf12aaf6de0",
            "actions": [
                {
                    "name": "movement",
                    "type": "Value",
                    "id": "09450bb6-247a-4357-8d9b-22b851359b39",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "aim",
                    "type": "Value",
                    "id": "add63c95-d01e-416b-9e00-090ef291b33a",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(x=0.05,y=0.05),InvertVector2(invertX=false)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ads",
                    "type": "Button",
                    "id": "72ce01ba-65e5-4b50-aa3f-97611cb3bcb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "fire",
                    "type": "Button",
                    "id": "27fb70ac-0634-45a0-8d51-6ae610ec1c1c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "sprint",
                    "type": "Button",
                    "id": "2d15363d-8d85-4b2c-9af8-bfb4c6b6f009",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "cb9f77a9-9abf-481a-8ba1-b659d0446e2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "reload",
                    "type": "Button",
                    "id": "65f863c7-47c8-40f8-b9a3-127f588002a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "switchWeapon",
                    "type": "Button",
                    "id": "94f302dd-adf4-483e-869e-91243fdf4b8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "useItem",
                    "type": "Button",
                    "id": "b2e5ee24-d9c6-4e7d-8885-434b95fd6f59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "2f1f3cd1-f622-4df1-ae08-aeffcc48645d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ba20f06c-8f0e-4590-9377-52b92eab087e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8fc758da-c761-4c8e-bd11-a62237d94f36",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bc37bb8e-1e2c-4fcd-a29f-eb1ccd4e3ca8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "85be2dab-b8f1-4184-aa24-2e4485f8f4be",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cfec74d3-da05-463d-bdbb-413d2043e703",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99b54410-c2ec-40e1-bf70-adb49a5f816f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f66d9347-ca61-4a20-870c-6547506a9877",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4ec8edc-4beb-4b7c-a62f-c1947746e163",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "switchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d473ad5a-9b59-4e04-9da0-975242bdf479",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ads",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "657b42ce-542b-458c-8de2-2e61bb683dd7",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "useItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8287ecc-62d5-49d3-81dc-e6405bca92e7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "116a1d90-7ea0-43e1-966c-9e26e814c50e",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "characterSelect",
            "id": "9fb645a8-4b40-4b55-9677-5fd48e211657",
            "actions": [
                {
                    "name": "nextCharacter",
                    "type": "Button",
                    "id": "719b7f78-7ea6-46cf-b60a-4bad13bb26d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "previousCharacter",
                    "type": "Button",
                    "id": "a2ad3db5-1ada-485d-8395-94ab0a801c9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "start",
                    "type": "Button",
                    "id": "bfe93db2-cf21-41f0-8c65-d81f2acae0ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cd4314b8-397f-4cc2-a6ae-3691b48fb515",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "nextCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89959950-4c00-4e10-bd7f-039e36cdbee6",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "nextCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fab0290-3bf6-42c2-b4f2-d2b542898532",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "nextCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8420ebe8-f883-46a4-920b-9b569c32a259",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "previousCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54918c98-8b35-44ba-ab91-36737065c1e3",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "previousCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b086f9f-67f0-48ad-9f75-a3e7097ad4cb",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "start",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}